--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-cryptography==41.0.1
-pyinstaller
-pyarmor
+pyinstaller==5.13.0
+cryptography==41.0.3
+psutil==5.9.4
+WMI==1.5.1
+Requests==2.31.0
+pyarmor==8.2.1
+Pillow==10.0.0
+customtkinter==5.2.0
